Closed Bug 619769 Opened 15 years ago Closed 15 years ago

FrameState::init leaks cursor when reifier.init() fails

Categories

(Core :: JavaScript Engine, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla6

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity, memory-leak, Whiteboard: fixed-in-cedar)

Attachments

(1 file)

69 FrameState::init() 70 { 89 uint8 *cursor = (uint8 *)cx->calloc(totalBytes); 90 if (!cursor) 91 return false; 92 93 #if defined JS_NUNBOX32 94 if (!reifier.init(nentries)) this leaks cursor: 95 return false;
Attached patch reorder — — Splinter Review
Assignee: general → timeless
Status: NEW → ASSIGNED
Attachment #498295 - Flags: review?(jorendorff)
Attachment #498295 - Flags: review?(jorendorff) → review+
Keywords: checkin-needed
Flags: in-testsuite-
Keywords: checkin-needed
Whiteboard: fixed-in-cedar
Target Milestone: --- → mozilla6
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: