Bug 619769 FrameState::init leaks cursor when reifier.init() fails.  r=jorendorff